Changes for 1.3.3:

 - new command line parameters for zabbix_sender (Andrey)
 - added support of system.boottime (Andrey)
 - fixed permissions for triggers (Eugene)
 - developed 'mass update' functionality for items (Eugene)
 - changed type of items.prevorgvalue to preserve data precision (Alexei)
 - added possibility of hostname using (Eugene)
 - new communication library and protocol (Alexei)
 - developed configuration interface of http monitoring (Eugene)
 - added support of 'eventlog[*]' for WinXX (Eugene)
 - fixed comilation on FreeBSD (Eugene)
 - misc HP-UX fixes (Alexei)
 - misc FreeBSD fixes (Alexei)
 - fixed false "Database corrupted" situations (Alexei)
 - item key length increased to 255 characters (Eugene)
 - fixed popups for screen of graph editing (Eugene)
 - improved databases determination of configuration script (Eugene)
 - new server parameter 'StartHTTPPollers' (Alexei)

Changes for 1.3.2:

 - removed support of parameter DisablePinger (Alexei)
 - fixed SQL statements for PostgreSQL (Eugene)
 - fixed printing of stdout/stderr (Eugene)
 - fixed permission system for empty maps (Eugene)
 - improved sqlite3 database support (Eugene)
 - developed simple trigger expression editor (Eugene)
 - fixed history viewing of log files (Eugene)
 - added images for oracle(Eugene)
 - added images for sqlite3(Eugene)

Changes for 1.3.1:

 - fixed master node adding (Eugene)
 - improved installation wizard (Eugene)
 - fixed permission system (Eugene)
 - added availability of multiple user groups selection (Eugene)
 - fixed screens displaying (Eugene)
 - fixed updating of hosts (Eugene)
 - removed bulkloader (Eugene)
 - improved editing of graphs (Eugene)
 - support of "-n" flag for ZABBIX server: change Node ID (Alexei)
 - fixed configuration file creation and reading (Eugene)
 - removed database creation from installation script (Eugene)
 - fixed multiple mutex system (Eugene)
 - added support of SQLite3 database (Eugene)