@@ -1,6 +1,7 @@
 CREATE TABLE hosts_tmp (
 	hostid		bigint unsigned		DEFAULT '0'	NOT NULL,
 	host		varchar(64)		DEFAULT ''	NOT NULL,
+	dns		varchar(64)		DEFAULT ''	NOT NULL,
 	useip		integer		DEFAULT '1'	NOT NULL,
 	ip		varchar(15)		DEFAULT '127.0.0.1'	NOT NULL,
 	port		integer		DEFAULT '0'	NOT NULL,
@@ -14,6 +15,6 @@ CREATE TABLE hosts_tmp (
 CREATE INDEX hosts_1 on hosts_tmp (host);
 CREATE INDEX hosts_2 on hosts_tmp (status);
 
-insert into hosts_tmp select hostid,host,useip,ip,port,status,disable_until,error,available,errors_from from hosts;
+insert into hosts_tmp select hostid,host,dns,useip,ip,port,status,disable_until,error,available,errors_from from hosts;
 drop table hosts;
 alter table hosts_tmp rename hosts;
